# OpenGL-RayTracer

./: CMakeLists.txt  CMakePresets.json  Color_Util.h  LICENSE  PPMimgFormat.cpp  vector_stor.h
